Display tasks in tabView and recyclerViews

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PushAlerts</string>
+    <string name="tiTasksOpen">Open</string>
+    <string name="tiTasksClosed">Closed</string>
 </resources>
