Display icon for task state

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="ivTaskClosedIcon">task closed timestamp icon</string>
     <string name="tvTaskUserTitle">Status</string>
     <string name="tvTaskPayloadTitle">Additional Information</string>
+    <string name="tvTaskHistoryTitle">History</string>
     <string name="tvTaskStatus_Created">Created</string>
     <string name="tvTaskStatus_Assigned">Assigned to: </string>
     <string name="tvTaskStatus_Rejected">Rejected by: </string>
