--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="ivCompanyLogo">The company logo</string>
+    <string name="tilPasswordHint">Password</string>
+    <string name="tilEmailHint">Email Address</string>
+    <string name="btnLogin">login</string>
 </resources>
