--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,9 @@
     <string name="ivStateIcon">Icon to indicate if finished or rejected</string>
     <string name="ivTaskSource">Icon for task source</string>
     <string name="ivDescriptionIcon">Icon for task description</string>
+    <string name="chipFilterDone">Done</string>
+    <string name="chipFilterRejected">Rejected</string>
+    <string name="chipFilterMine">Mine</string>
+    <string name="chipFilterUnassigned">Unassigned</string>
+    <string name="title">Push Alerts</string>
 </resources>
